# keyremap

./: Cargo.toml  README.md  README_en.md  build.rs  keyremap.toml
.github/workflows/: release.yml
assets/: app.rc  app.res
src/: config.rs  main.rs
src/lib/: config.rs  lib.rs  windows_console.rs  windows_service.rs  windows_singleton.rs
