[package]
name = "keyremap"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = { version = "0.5.3", features = ["unstable_grab", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
log = "0.4"
env_logger = "0.11.5"
clap = { version = "4.4", features = ["derive"] }
