[package]
name = "keyremap"
version = "0.2.0"
edition = "2021"

[dependencies]
rdev = { version = "0.5.3", features = ["unstable_grab", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
log = "0.4"
env_logger = "0.11.5"
clap = { version = "4.4", features = ["derive"] }
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
] }

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "keyremap"
path = "src/main.rs"

[profile.release]
debug = false
lto = true
panic = "abort"

[features]
no_console = []
